@@ -2,6 +2,8 @@ Changes for Perl extension Module-Install
 
         - Support for 'keywords' key in META.yml (CHORNY)
         - More URLs for licenses, test for this (CHORNY)
+        - tests for extracting link to bugtracker,
+          will more correctly extract them (CHORNY)
 
 0.80 Tue 17 Mar 2009
 	- Don't generate MYMETA.yml if we don't have YAML::Tiny, even if
